--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+unbind C-b
+set -g prefix C-t
 set -g escape-time 0
 set -g display-panes-time 10000
 set -g default-terminal xterm-256color
@@ -13,9 +15,16 @@ bind-key p run "fish -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
 
 
 # --- key bind
-bind c   new-window   -c  "#{pane_current_path}"
-bind '"' split-window -vc "#{pane_current_path}"
-bind %   split-window -hc "#{pane_current_path}"
+unbind '"'
+unbind %
+bind c new-window   -c  "#{pane_current_path}"
+bind s split-window -vc "#{pane_current_path}"
+bind v split-window -hc "#{pane_current_path}"
+
+bind r source-file ~/.tmux.conf
+bind C-t last-window
+bind t choose-session
+bind w choose-window
 
 bind k select-pane -U
 bind j select-pane -D
