--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@ unbind C-b
 set -g prefix C-t
 set -g escape-time 0
 set -g display-panes-time 10000
-set -g default-terminal xterm-256color
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -sa terminal-overrides ",xterm-256color:RGB"
 
 
 # --- copy & paste
