--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set -sa terminal-overrides ",xterm-256color:RGB"
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y   send-keys -X copy-pipe "fish -c pbcopy"
-bind-key p run "fish -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
+bind-key -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -c pbcopy"
+bind-key p run "$SHELL -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
 
 
 # --- key bind
@@ -45,10 +45,12 @@ set -g status-style bg=colour235,fg=colour252
 set -g status-left  '#[fg=cyan,bold][#S]'
 set -g status-right '#[bold] %a %m/%d %H:%M '
 set -g status-left-length 20
+set -g message-style bg=colour235,fg=colour252
 
 setw -g window-status-format         ' #[fg=colour242]#I:#W#F '
 setw -g window-status-current-format ' #I:#W#[fg=cyan]#F '
 setw -g window-status-current-style bold
+setw -g mode-style bg=colour235,fg=colour252,bold
 
 set -g pane-border-style bg=black,fg=colour19
 set -g pane-active-border-style bg=black,fg=cyan
