--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,16 +41,16 @@ bind -n M-h resize-pane -L 15
 set -g set-titles on
 set -g status-justify centre
 set -g status-position bottom
-set -g status-style bg=colour235,fg=colour252
+set -g status-style bg=colour236,fg=colour251
 set -g status-left  '#[fg=cyan,bold][#S]'
 set -g status-right '#[bold] %a %m/%d %H:%M '
 set -g status-left-length 20
-set -g message-style bg=colour235,fg=colour252
+set -g message-style bg=colour236,fg=colour251
 
 setw -g window-status-format         ' #[fg=colour242]#I:#W#F '
 setw -g window-status-current-format ' #I:#W#[fg=cyan]#F '
 setw -g window-status-current-style bold
-setw -g mode-style bg=colour235,fg=colour252,bold
+setw -g mode-style bg=colour239
 
-set -g pane-border-style bg=black,fg=colour19
-set -g pane-active-border-style bg=black,fg=cyan
+set -g pane-border-style bg=colour236,fg=colour236
+set -g pane-active-border-style bg=colour236,fg=cyan
