--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,9 @@ set -g prefix C-t
 set -g escape-time 0
 set -g display-panes-time 10000
 set -g default-terminal "screen-256color"
-set -sa terminal-overrides ",xterm-256color:RGB"
-
+set -as terminal-overrides ",xterm-256color:tc"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # --- copy & paste
 set-window-option -g mode-keys vi
@@ -12,7 +13,6 @@ bind-key -T copy-mode-vi v   send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -c pbcopy"
 bind-key p run "$SHELL -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
-
 
 # --- key bind
 unbind '"'
@@ -36,8 +36,7 @@ bind -n M-j resize-pane -D 5
 bind -n M-l resize-pane -R 15
 bind -n M-h resize-pane -L 15
 
-
-# --- looks
+# --- appearance
 set -g set-titles on
 set -g status-justify centre
 set -g status-position bottom
