--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ set -as terminal-overrides ",xterm-256color:tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
+# --- mouse
+set-option -g mouse on
+
 # --- copy & paste
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
