--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ set-option -g mouse on
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -c pbcopy"
-bind-key p run "$SHELL -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
+bind-key -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -i -c pbcopy"
+bind-key p run "$SHELL -i -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
 
 # --- key bind
 unbind '"'
