--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ unbind C-b
 set -g prefix C-t
 set -g escape-time 0
 set -g display-panes-time 10000
+set -g focus-events on
 set -g default-terminal "screen-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
