--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # --- mouse
-set-option -g mouse on
+# set-option -g mouse on
 
 # --- copy & paste
 set-window-option -g mode-keys vi
