--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g prefix C-t
 set -g escape-time 0
 set -g display-panes-time 10000
 set -g focus-events on
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
