update vim & tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,10 @@ set-option -g mouse on
 
 # --- copy & paste
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v   send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -i -c pbcopy"
-bind-key p run "$SHELL -i -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
+bind -T copy-mode-vi v   send-keys -X begin-selection
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -i -c pbcopy"
+bind p run "$SHELL -i -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
 
 # --- key bind
 unbind '"'
@@ -30,30 +30,16 @@ bind C-t last-window
 bind t choose-session
 bind w choose-window
 
-# bind k select-pane -U
-# bind j select-pane -D
-# bind l select-pane -R
-# bind h select-pane -L
+bind k select-pane -U
+bind j select-pane -D
+bind l select-pane -R
+bind h select-pane -L
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind -T copy-mode-vi 'C-h' select-pane -L
+bind -T copy-mode-vi 'C-j' select-pane -D
+bind -T copy-mode-vi 'C-k' select-pane -U
+bind -T copy-mode-vi 'C-l' select-pane -R
+bind -T copy-mode-vi 'C-\' select-pane -l
 
 bind -n M-k resize-pane -U 5
 bind -n M-j resize-pane -D 5
@@ -69,11 +55,9 @@ set -g status-left  '#[fg=cyan,bold][#S]'
 set -g status-right '#[bold] %a %m/%d %H:%M '
 set -g status-left-length 20
 set -g message-style bg=colour236,fg=colour251
-
-setw -g window-status-format         ' #[fg=colour242]#I:#W#F '
-setw -g window-status-current-format ' #I:#W#[fg=cyan]#F '
-setw -g window-status-current-style bold
-setw -g mode-style bg=colour239
-
+set -g window-status-format         ' #[fg=colour242]#I:#W#F '
+set -g window-status-current-format ' #I:#W#[fg=cyan]#F '
+set -g window-status-current-style bold
+set -g mode-style bg=colour239
 set -g pane-border-style bg=colour236,fg=colour236
 set -g pane-active-border-style bg=colour236,fg=cyan
