--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-t
 set -g escape-time 0
 set -g display-panes-time 10000
 set -g focus-events on
+set -g set-clipboard on
 set -g default-terminal "xterm-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
