--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,9 @@ set -g escape-time 0
 set -g display-panes-time 10000
 set -g focus-events on
 set -g set-clipboard on
-set -g default-terminal "xterm-256color"
-set -as terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",*:Tc"
+set -as terminal-overrides ",*:RGB"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
