fix: tmux default-terminal to avoid "terminal is not fully functional"

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g escape-time 0
 set -g display-panes-time 10000
 set -g focus-events on
 set -g set-clipboard on
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -as terminal-overrides ",*:Tc"
 set -as terminal-overrides ",*:RGB"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
