--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@ set -g escape-time 0
 set -g display-panes-time 10000
 set -g focus-events on
 set -g set-clipboard on
+set -g renumber-windows on
+set -g base-index 1
+set -g pane-base-index 1
 set -g default-terminal "screen-256color"
 set -as terminal-overrides ",*:Tc"
 set -as terminal-overrides ",*:RGB"
@@ -24,6 +27,7 @@ bind p run "$SHELL -i -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
 unbind '"'
 unbind %
 bind c new-window   -c  "#{pane_current_path}"
+bind a new-window   -ac "#{pane_current_path}"
 bind s split-window -vc "#{pane_current_path}"
 bind v split-window -hc "#{pane_current_path}"
 
