--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ set -g status-left-length 20
 set -g message-style bg=colour239,fg=colour251
 # set -g window-status-format         ' #[fg=colour242]#I:#W#F '
 # set -g window-status-current-format ' #I:#W#[fg=cyan]#F '
-set -g window-status-format ' #[fg=colour242]#{window_index}:#{b:pane_current_path}#F '
+set -g window-status-format ' #[fg=colour244]#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-format ' #{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-style bold
 set -g status-interval 5
