--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,17 +56,15 @@ bind -n M-h resize-pane -L 15
 set -g set-titles on
 set -g status-justify centre
 set -g status-position bottom
+set -g status-interval 5
 set -g status-style bg=colour236,fg=colour251
-set -g status-left  '#[fg=cyan,bold][#S]'
-set -g status-right '#[bold] %a %m/%d %H:%M '
+set -g status-left  '#[fg=cyan,bold]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
+set -g status-right '#[bold] %H:%M '
 set -g status-left-length 20
 set -g message-style bg=colour239,fg=colour251
-# set -g window-status-format         ' #[fg=colour242]#I:#W#F '
-# set -g window-status-current-format ' #I:#W#[fg=cyan]#F '
 set -g window-status-format '#[fg=colour244]#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-format '#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-style bold
-set -g status-interval 5
 set -g mode-style bg=colour239
 set -g pane-border-style bg=colour236,fg=colour236
 set -g pane-active-border-style bg=colour236,fg=cyan
