--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,9 +58,9 @@ set -g status-justify centre
 set -g status-position bottom
 set -g status-interval 5
 set -g status-style bg=colour236,fg=colour251
-set -g status-left  '#[fg=cyan,bold]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
-set -g status-right '#[bold] %H:%M '
-set -g status-left-length 20
+set -g status-left  '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
+set -g status-right '%H:%M '
+set -g status-left-length 35
 set -g message-style bg=colour239,fg=colour251
 set -g window-status-format '#[fg=colour244]#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-format '#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
