--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,9 @@ bind -n M-j resize-pane -D 5
 bind -n M-l resize-pane -R 15
 bind -n M-h resize-pane -L 15
 
+bind -n M-Left run "tmux swap-window -t -1 && tmux previous-window"
+bind -n M-Right run "tmux swap-window -t +1 && tmux next-window "
+
 # --- appearance
 set -g set-titles on
 set -g status-justify centre
