--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g default-terminal "screen-256color"
 set -as terminal-overrides ",*:Tc"
 
 # --- mouse
-set-option -g mouse on
+# set-option -g mouse on
 
 # --- copy & paste
 set-window-option -g mode-keys vi
