feat(tmux): exit copy mode with escape

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,8 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v   send-keys -X begin-selection
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind -T copy-mode-vi y   send-keys -X copy-pipe "$SHELL -i -c pbcopy"
+bind -T copy-mode-vi Escape send-keys -X cancel
+
 bind p run "$SHELL -i -c pbpaste | tmux load-buffer - ; tmux paste-buffer"
 
 # --- key bind
