--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,8 +60,8 @@ set -g status-justify centre
 set -g status-position bottom
 set -g status-interval 5
 set -g status-style bg=colour236,fg=colour251
-# set -g status-left  '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
-set -g status-left ''
+set -g status-left  '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
+# set -g status-left ''
 set -g status-right ' %H:%M '
 set -g status-left-length 16
 set -g message-style bg=colour239,fg=colour251
