xremap: set keymap for wezterm

--- a/xremap-config.yml
+++ b/xremap-config.yml
@@ -24,11 +24,7 @@ keymap:
       LeftAlt-l: Right
 
       # Mac-like key bindings
-      LeftMeta-c: C-c
-      LeftMeta-v: C-v
       LeftMeta-f: C-f
-      LeftMeta-t: C-t
-      LeftMeta-w: C-w
       LeftMeta-l: C-l
       LeftMeta-z: C-z
       # +Shift
@@ -38,3 +34,21 @@ keymap:
       LeftMeta-Shift-Equal: C-Shift-Equal
       LeftMeta-Shift-Minus: C-Shift-Minus
       LeftMeta-0: C-0
+
+  - name: Global except Terminal
+    application:
+      not: [wezterm]
+    remap:
+      LeftMeta-t: C-Shift-t
+      LeftMeta-w: C-Shift-w
+      LeftMeta-c: C-Shift-c
+      LeftMeta-v: C-Shift-v
+
+  - name: Terminal
+    application:
+      only: [wezterm]
+    remap:
+      LeftMeta-t: C-Shift-t
+      LeftMeta-w: C-Shift-w
+      LeftMeta-c: C-Shift-c
+      LeftMeta-v: C-Shift-v
