--- a/xremap-config.yml
+++ b/xremap-config.yml
@@ -31,6 +31,7 @@ keymap:
       LeftMeta-f: C-f
       LeftMeta-l: C-l
       LeftMeta-z: C-z
+      LeftMeta-r: C-r
       # +Shift
       LeftMeta-Shift-t: C-Shift-t
       LeftMeta-Shift-z: C-Shift-z
