--- a/interpreter/package.json
+++ b/interpreter/package.json
@@ -13,6 +13,7 @@
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.48",
     "@langchain/openai": "^0.4.4",
+    "langfuse-langchain": "^3.35.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
