--- a/interpreter/package.json
+++ b/interpreter/package.json
@@ -4,7 +4,7 @@
     "node": "22"
   },
   "scripts": {
-    "start": "./env.sh tsx index.ts",
+    "start": "./env.sh tsx src/index.ts",
     "format": "prettier --write .",
     "check": "prettier --check . && eslint . && tsc --noEmit"
   },
