test(agent): test tools

--- a/agent/package.json
+++ b/agent/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "./env.sh tsx src/index.ts",
     "format": "prettier --write .",
-    "check": "prettier --check . && eslint . && tsc --noEmit"
+    "check": "prettier --check . && eslint . && tsc --noEmit && tsx --test",
+    "test": "tsx --test"
   },
   "dependencies": {
     "@langchain/community": "^0.3.32",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.13.5",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
