--- a/agent/package.json
+++ b/agent/package.json
@@ -14,6 +14,7 @@
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.48",
     "@langchain/openai": "^0.4.4",
+    "@playwright/test": "^1.50.1",
     "langfuse-langchain": "^3.35.2",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
