--- a/agent/package.json
+++ b/agent/package.json
@@ -5,8 +5,8 @@
   },
   "scripts": {
     "start": "./env.sh tsx src/index.ts",
-    "format": "prettier --write .",
-    "check": "prettier --check . && eslint . && tsc --noEmit && tsx --test",
+    "format": "prettier --cache --write .",
+    "check": "prettier --check . && eslint --cache . && tsc --noEmit && tsx --test",
     "test": "tsx --test"
   },
   "dependencies": {
@@ -15,7 +15,9 @@
     "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.48",
     "@langchain/openai": "^0.4.4",
+    "@mozilla/readability": "^0.5.0",
     "@playwright/test": "^1.50.1",
+    "jsdom": "^26.0.0",
     "langfuse-langchain": "^3.35.2",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.5",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
