--- a/agent/package.json
+++ b/agent/package.json
@@ -7,7 +7,8 @@
     "start": "./env.sh tsx src/index.ts",
     "format": "prettier --cache --write .",
     "check": "prettier --check . && eslint --cache . && tsc --noEmit && tsx --test",
-    "test": "tsx --test"
+    "test": "tsx --test",
+    "setup-browser": "tsx src/tools/readWebPageByUserToolSetup.ts"
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.15",
