--- a/agent/package.json
+++ b/agent/package.json
@@ -14,6 +14,7 @@
     "@langchain/anthropic": "^0.3.15",
     "@langchain/community": "^0.3.33",
     "@langchain/core": "^0.3.42",
+    "@langchain/google-vertexai": "^0.2.0",
     "@langchain/langgraph": "^0.2.51",
     "@langchain/openai": "^0.4.4",
     "@mozilla/readability": "^0.5.0",
