tmux: update key bind

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,8 +32,8 @@ bind v split-window -hc "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf
 bind C-t last-window
-bind t choose-session
-bind w choose-window
+bind t choose-tree
+bind S choose-session
 
 bind k select-pane -U
 bind j select-pane -D
