--- a/agent/package.json
+++ b/agent/package.json
@@ -5,6 +5,7 @@
   },
   "scripts": {
     "start": "./env.sh tsx src/index.ts",
+    "build": "ncc build src/index.ts -o dist --minify --source-map",
     "format": "prettier --cache --write .",
     "check": "prettier --check . && eslint --cache . && tsc --noEmit && tsx --test",
     "test": "tsx --test",
@@ -27,6 +28,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.5",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "prettier": "3.5.2",
