--- a/agent-plain/package.json
+++ b/agent-plain/package.json
@@ -6,6 +6,7 @@
     "test": "node --test",
     "lint": "npx @biomejs/biome check",
     "fix": "npx @biomejs/biome check --fix",
+    "fix-unsafe": "npx @biomejs/biome check --fix --unsafe",
     "typecheck": "tsc"
   },
   "devDependencies": {
