--- a/agent-plain/tsconfig.json
+++ b/agent-plain/tsconfig.json
@@ -3,12 +3,12 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-
-    "noEmit": true
+    "noEmit": true,
+    "target": "es2022",
+    "module": "es2022"
   }
 }
