--- a/agent/package.json
+++ b/agent/package.json
@@ -1,39 +1,17 @@
 {
   "private": true,
-  "engines": {
-    "node": "22"
-  },
   "scripts": {
-    "start": "./env.sh tsx src/index.ts",
-    "build": "ncc build src/index.ts -o dist --minify --source-map",
-    "format": "prettier --cache --write .",
-    "check": "prettier --check . && eslint --cache . && tsc --noEmit && tsx --test",
-    "test": "tsx --test",
-    "setup-browser": "tsx src/tools/readWebPageByUserBrowserToolSetup.ts"
-  },
-  "dependencies": {
-    "@langchain/anthropic": "^0.3.15",
-    "@langchain/community": "^0.3.34",
-    "@langchain/core": "^0.3.42",
-    "@langchain/google-vertexai": "^0.2.1",
-    "@langchain/langgraph": "^0.2.54",
-    "@langchain/openai": "^0.4.4",
-    "@mozilla/readability": "^0.6.0",
-    "@playwright/test": "^1.51.0",
-    "jsdom": "^26.0.0",
-    "zod": "^3.24.2"
+    "start": "./env.sh node ./src/index.mjs",
+    "check": "npm run lint && npm run typecheck && npm run test",
+    "test": "node --test",
+    "lint": "npx @biomejs/biome check",
+    "fix": "npx @biomejs/biome check --fix",
+    "fix-unsafe": "npx @biomejs/biome check --fix --unsafe",
+    "typecheck": "tsc"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/jsdom": "^21.1.7",
+    "@biomejs/biome": "1.9.4",
     "@types/node": "^22.13.10",
-    "@vercel/ncc": "^0.38.3",
-    "eslint": "^9.22.0",
-    "globals": "^16.0.0",
-    "prettier": "3.5.3",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0"
+    "typescript": "^5.8.2"
   }
 }
