feat(agent): support mcp

--- a/agent/package.json
+++ b/agent/package.json
@@ -12,6 +12,9 @@
     "fix-unsafe": "npx @biomejs/biome check --fix --unsafe",
     "typecheck": "tsc"
   },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.8.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "^22.13.10",
