--- a/agent/tsconfig.json
+++ b/agent/tsconfig.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "target": "es2022",
-    "module": "es2022"
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "bundler"
   }
 }
