--- a/agent/biome.json
+++ b/agent/biome.json
@@ -7,8 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [".agent/**/*"],
-    "include": [".agent/config.mjs"]
+    "ignore": [".agent/**/*"]
   },
   "formatter": {
     "enabled": true,
@@ -25,7 +24,8 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "double"
+      "quoteStyle": "double",
+      "semicolons": "always"
     }
   }
 }
