--- a/xremap.service
+++ b/xremap.service
@@ -1,3 +1,6 @@
+# https://github.com/xremap/xremap
+#
+# mkdir -p ~/.config/systemd/user
 # cp xremap.service ~/.config/systemd/user/xremap.service
 # systemctl --user daemon-reload
 # systemctl --user enable xremap
