chore(tmux): update default terminal to tmux-256color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g set-clipboard on
 set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",*:Tc"
 
 # --- mouse
