--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,11 @@ set -g pane-base-index 1
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",*:Tc"
 
+# --- bell
+set -g monitor-bell on
+set -g bell-action any
+set -g visual-bell off
+
 # --- mouse
 set-option -g mouse on
 
