chore(tmux): update bell style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,6 +73,7 @@ set -g message-style bg=colour239,fg=colour251
 set -g window-status-format '#[fg=colour244]#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-format '#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-style bold
+set -g window-status-bell-style 'fg=colour244'
 set -g mode-style bg=colour239
 set -g pane-border-style bg=colour236,fg=colour236
 set -g pane-active-border-style bg=colour236,fg=cyan
