--- a/agent/package.json
+++ b/agent/package.json
@@ -16,7 +16,7 @@
     "@modelcontextprotocol/sdk": "^1.13.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "^2.0.6",
     "@types/node": "^22.15.21",
     "typescript": "^5.8.3"
   }
