--- a/agent/package.json
+++ b/agent/package.json
@@ -13,11 +13,16 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.13.2"
+    "@modelcontextprotocol/sdk": "^1.13.2",
+    "@mozilla/readability": "^0.6.0",
+    "jsdom": "^26.1.0",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.6",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.15.21",
+    "@types/turndown": "^5.0.5",
     "typescript": "^5.8.3"
   }
 }
