--- a/agent/package.json
+++ b/agent/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.2",
     "@mozilla/readability": "^0.6.0",
+    "@playwright/test": "^1.53.1",
     "jsdom": "^26.1.0",
     "turndown": "^7.2.0"
   },
