--- a/agent/.agent/sandbox/Dockerfile
+++ b/agent/.agent/sandbox/Dockerfile
@@ -1,7 +1,11 @@
 FROM node:22
 
-RUN apt update && \
-  apt install -y dnsutils iptables ipset iproute2 iputils-ping netcat-openbsd && \
-  npm install -g npm@latest
+RUN apt update && apt install -y \
+      bash \
+      iptables ipset iproute2 dnsmasq \
+      dnsutils iputils-ping netcat-openbsd \
+      curl \
+      git \
+    && npm install -g npm@latest
 
 USER node:node
