fix(agent-sandbox): v0.0.9; fix host mount path starts with ~, update preset Dockerfile
- Add ripgrep, fd
- Remove xz, nc, ip because they are included in busybox
- Remove ccusage: it gets price table from github.com, but I don't want to allow
  this access by default.

--- a/agent-sandbox/Dockerfile.minimum
+++ b/agent-sandbox/Dockerfile.minimum
@@ -1,7 +1,6 @@
 FROM debian:12
 
 RUN apt update && apt install -y \
-      bash \
-      iptables ipset iproute2 dnsmasq \
-      dnsutils iputils-ping netcat-openbsd
+      busybox bash \
+      iptables ipset dnsmasq dnsutils
 
