chore(xremap): ignore corne

--- a/xremap-config.yml
+++ b/xremap-config.yml
@@ -1,5 +1,7 @@
 modmap:
   - name: Global
+    device:
+      not: ['foostan Corne Keyboard', 'foostan Corne']
     remap:
       # CapsLock to Ctrl
       CapsLock: LeftCtrl
