chore(agent): update sandbox config, remove command name from execCommand output

--- a/agent/.agent/sandbox/Dockerfile
+++ b/agent/.agent/sandbox/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:22
 
 RUN apt update && apt install -y \
-      bash \
-      iptables ipset iproute2 dnsmasq \
-      dnsutils iputils-ping netcat-openbsd \
-      curl \
+      busybox bash \
+      iptables ipset dnsmasq dnsutils \
+      ripgrep fd-find \
       git \
+    && bash -c '$(which fdfind) /usr/local/bin/fd' \
     && npm install -g npm@latest
 
 USER node:node
