--- a/agent/package.json
+++ b/agent/package.json
@@ -14,6 +14,7 @@
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@mozilla/readability": "^0.6.0",
     "@playwright/test": "^1.54.1",
+    "diff": "^8.0.2",
     "jsdom": "^26.1.0",
     "turndown": "^7.2.0"
   },
