--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -1,6 +1,6 @@
 {
-  "permissions": {
-    "allow": [
+  "autoApproval": {
+    "patterns": [
       {
         "toolName": "exec_command",
         "input": {
