--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,14 +61,13 @@ bind -n M-Right run "tmux swap-window -t +1 && tmux next-window "
 
 # --- appearance
 set -g set-titles on
-set -g status-justify centre
+set -g status-justify left
 set -g status-position bottom
 set -g status-interval 5
 set -g status-style bg=colour236,fg=colour251
-set -g status-left  '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
-# set -g status-left ''
-set -g status-right ' %H:%M '
-set -g status-left-length 24
+set -g status-left '%H:%M  '
+set -g status-right '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
+# set -g status-left-length 24
 set -g message-style bg=colour239,fg=colour251
 set -g window-status-format '#[fg=colour244]#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
 set -g window-status-current-format '#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
