feat(agent): Add agent interruption mechanism

--- a/agent/biome.json
+++ b/agent/biome.json
@@ -6,6 +6,7 @@
     "useIgnoreFile": false
   },
   "files": {
+    "includes": ["**", "!.config/**"],
     "ignoreUnknown": false
   },
   "formatter": {
