--- a/agent/package.json
+++ b/agent/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
     "@mozilla/readability": "^0.6.0",
-    "@playwright/test": "^1.54.2",
     "diff": "^8.0.2",
     "jsdom": "^26.1.0",
+    "puppeteer": "^24.17.1",
     "turndown": "^7.2.0"
   },
   "devDependencies": {
