fix(agent): fix lint errors

--- a/agent/biome.json
+++ b/agent/biome.json
@@ -1,12 +1,12 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
     "useIgnoreFile": false
   },
   "files": {
-    "includes": ["**", "!.config/**"],
+    "includes": ["**", "!.config"],
     "ignoreUnknown": false
   },
   "formatter": {
