--- a/agent/package.json
+++ b/agent/package.json
@@ -4,24 +4,23 @@
     "node": ">=22"
   },
   "scripts": {
-    "check": "npm run lint && npm run typecheck && npm run test",
+    "check": "npm run lint && tsc && npm run test",
     "test": "node --test",
     "lint": "npx @biomejs/biome check",
-    "fix": "npx @biomejs/biome check --fix",
-    "typecheck": "tsc"
+    "fix": "npx @biomejs/biome check --fix"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.17.4",
+    "@modelcontextprotocol/sdk": "^1.17.5",
     "@mozilla/readability": "^0.6.0",
     "diff": "^8.0.2",
     "jsdom": "^26.1.0",
-    "puppeteer": "^24.17.1",
+    "puppeteer": "^24.20.0",
     "turndown": "^7.2.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
+    "@biomejs/biome": "^2.2.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.18.1",
     "@types/turndown": "^5.0.5",
     "typescript": "^5.9.2"
   }
