--- a/agent/biome.json
+++ b/agent/biome.json
@@ -6,7 +6,7 @@
     "useIgnoreFile": false
   },
   "files": {
-    "includes": ["**", "!.config"],
+    "includes": ["**", "!.config", "!.cache"],
     "ignoreUnknown": false
   },
   "formatter": {
