feat(agent): format MCP JSON output and save as .json files

--- a/agent/.agent/sandbox/Dockerfile
+++ b/agent/.agent/sandbox/Dockerfile
@@ -3,7 +3,7 @@ FROM node:22
 RUN apt update && apt install -y \
       busybox bash \
       iptables ipset dnsmasq dnsutils \
-      ripgrep fd-find \
+      ripgrep fd-find jq \
       git tmux \
     && bash -c 'ln -s $(which fdfind) /usr/local/bin/fd' \
     && npm install -g npm@latest
