chore(tmux): hide status-right

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,7 +66,7 @@ set -g status-position bottom
 set -g status-interval 5
 set -g status-style bg=colour236,fg=colour251
 set -g status-left '#[fg=cyan]#S#[fg=colour251] %H:%M  '
-set -g status-right '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
+# set -g status-right '#[fg=cyan]#(cd "#{pane_current_path}"; git rev-parse --abbrev-ref HEAD)'
 # set -g status-left-length 24
 set -g message-style bg=colour239,fg=colour251
 set -g window-status-format '#[fg=colour244]#{window_index}:#{b:pane_current_path}#[fg=cyan]#F '
