refactor(agent): replace providerMetadata with provider.{fields,source} structure
Co-authored-by: Agent by iinm <agent-by-iinm+gemini-flash-thinking-high@localhost>

--- a/agent/biome.json
+++ b/agent/biome.json
@@ -6,7 +6,7 @@
     "useIgnoreFile": false
   },
   "files": {
-    "includes": ["**", "!.config", "!.cache"],
+    "includes": ["**", "!.config", "!.cache", "!.agent"],
     "ignoreUnknown": false
   },
   "formatter": {
