--- a/agent/.gitignore
+++ b/agent/.gitignore
@@ -1,8 +1,11 @@
 node_modules/
 tmp/
 .cache/
-.config/
+
+.config/*
+!.config/prompts/
 
 .agent/*
 !.agent/config.json
 !.agent/sandbox/
+!.agent/prompts/
