feat(agent): add separator to sandbox config

--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -27,6 +27,7 @@
   "sandbox": {
     "command": ".agent/sandbox/run",
     "args": ["--skip-build", "--keep-alive", "30"],
+    "separator": "--",
     "rules": [
       {
         "pattern": {
