--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -1,26 +1,23 @@
 {
   "autoApproval": {
     "patterns": [
-      // {
-      //   "toolName": "exec_command",
-      //   "input": {
-      //     "command": "npm",
-      //     "args": ["run", { "regex": "^(ci|check|fix)$" }]
-      //   }
-      // },
-      // {
-      //   "toolName": { "regex": "^(write_file|patch_file)$" },
-      //   "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } }
-      // },
-      // {
-      //   "toolName": { "regex": "^(write_file|patch_file)$" },
-      //   "input": { "filePath": { "regex": "^src/" } }
-      // },
-      // {
-      //   "toolName": "ask_google"
-      // }
       {
-        "toolName": { "regex": "." }
+        "toolName": "exec_command",
+        "input": {
+          "command": "npm",
+          "args": ["run", { "regex": "^(ci|check|fix)$" }]
+        }
+      },
+      {
+        "toolName": { "regex": "^(write_file|patch_file)$" },
+        "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } }
+      },
+      {
+        "toolName": { "regex": "^(write_file|patch_file)$" },
+        "input": { "filePath": { "regex": "^src/" } }
+      },
+      {
+        "toolName": "ask_google"
       }
     ]
   },
