feat(agent): support auto-denying tool use with reason
- Update `ToolUseApprover` to support "deny" action and reason in patterns.
- Modify `Agent` to handle denied tool calls by returning the specified reason as an error.
- Ensure project-specific configuration patterns take precedence over defaults.
- Update tests and documentation with examples of auto-denying tools like `grep` and `find`.

Co-authored-by: Agent by iinm <agent-by-iinm+gemini-flash-thinking-high@localhost>

--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -3,6 +3,18 @@
     "patterns": [
       {
         "toolName": "exec_command",
+        "input": { "command": "grep" },
+        "action": "deny",
+        "reason": "Use rg"
+      },
+      {
+        "toolName": "exec_command",
+        "input": { "command": "find" },
+        "action": "deny",
+        "reason": "Use fd"
+      },
+      {
+        "toolName": "exec_command",
         "input": {
           "command": "npm",
           "args": ["run", { "regex": "^(ci|check|fix|test)$" }]
