feat(agent): add subagent delegation support
- Add delegate_to_subagent and report_as_subagent tools
- Add subagent status event to agent
- Add MCP servers configuration support
- Add feature-dev prompt to library
- Update CLI to handle subagent context

Co-authored-by: Agent by iinm <agent-by-iinm+claude-sonnet-thinking-16k@localhost>

--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -14,6 +14,9 @@
         "reason": "Use fd"
       },
       {
+        "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" }
+      },
+      {
         "toolName": "exec_command",
         "input": {
           "command": "npm",
@@ -47,5 +50,14 @@
         "extraArgs": ["--allow-net", "0.0.0.0/0"]
       }
     ]
+  },
+  "mcpServers": {
+    //"notion": {
+    //  "command": "npx",
+    //  "args": ["-y", "mcp-remote", "https://mcp.notion.com/mcp"],
+    //  "options": {
+    //    "enabledTools": ["notion-search", "notion-fetch"]
+    //  }
+    //}
   }
 }
