feat(agent): add preset agent roles for delegate_to_subagent
Add support for predefined agent roles that can be loaded from
.config/agents/ and .agent/agents/ directories. Roles can include
description and content, with optional import field for remote roles.

- Add loadAgentRoles utility to load role definitions from markdown files
- Support custom: prefix for ad-hoc roles (backward compatible)
- Display available preset roles in system prompt
- Include role content in delegation result message
- Add comprehensive error messages with available role list

Co-authored-by: Agent by iinm <agent-by-iinm+claude-sonnet-thinking-16k@localhost>

--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -29,7 +29,7 @@
       },
       {
         "toolName": { "regex": "^(write_file|patch_file)$" },
-        "input": { "filePath": { "regex": "^src/" } }
+        "input": { "filePath": { "regex": "^(\\./)?src/" } }
       },
       {
         "toolName": "ask_google"
