feat(agent): add agents and prompts directories with symlinks for custom roles
- Create agents/ and prompts/ directories with symlinks to library files
- Add agents.predefined/ to loadAgentRoles search paths
- Move test-code-optimizer to agents.library from prompts.library
- Update .gitignore to include new agent/prompt directories

--- a/agent/.gitignore
+++ b/agent/.gitignore
@@ -5,7 +5,10 @@ tmp/
 .config/*
 !.config/prompts.predefined/
 !.config/prompts.library/
+!.config/prompts/
+!.config/agents.predefined/
 !.config/agents.library/
+!.config/agents/
 
 .agent/*
 !.agent/config.json
