--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -14,33 +14,30 @@
         "reason": "Use fd"
       },
       {
-        "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" }
-      },
-      {
-        "toolName": "exec_command",
-        "input": {
-          "command": "exec_command"
-        },
-        "action": "deny",
-        "reason": "Expected shell command name"
+        "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" },
+        "action": "allow"
       },
       {
         "toolName": "exec_command",
         "input": {
           "command": "npm",
           "args": ["run", { "regex": "^(ci|check|fix|test)$" }]
-        }
+        },
+        "action": "allow"
       },
       {
         "toolName": { "regex": "^(write_file|patch_file)$" },
-        "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } }
+        "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } },
+        "action": "allow"
       },
       {
         "toolName": { "regex": "^(write_file|patch_file)$" },
-        "input": { "filePath": { "regex": "^(\\./)?src/" } }
+        "input": { "filePath": { "regex": "^(\\./)?src/" } },
+        "action": "allow"
       },
       {
-        "toolName": "ask_google"
+        "toolName": "ask_google",
+        "action": "allow"
       }
     ]
   },
