--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -1,44 +1,63 @@
 {
   "autoApproval": {
     "patterns": [
+      // YOLO mode
       {
         "toolName": "exec_command",
-        "input": { "command": "grep" },
+        "input": { "command": { "regex": "^(grep|find)$" } },
         "action": "deny",
-        "reason": "Use rg"
+        "reason": "Use rg or fd"
       },
       {
-        "toolName": "exec_command",
-        "input": { "command": "find" },
+        "toolName": { "regex": "^(fetch_web_page|fetch_web_page_with_browser)$" },
         "action": "deny",
-        "reason": "Use fd"
+        "reason": "Use ask_google instead"
       },
       {
-        "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" },
-        "action": "allow"
-      },
-      {
-        "toolName": "exec_command",
-        "input": {
-          "command": "npm",
-          "args": ["run", { "regex": "^(ci|check|fix|test)$" }]
-        },
-        "action": "allow"
-      },
-      {
-        "toolName": { "regex": "^(write_file|patch_file)$" },
-        "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } },
-        "action": "allow"
-      },
-      {
-        "toolName": { "regex": "^(write_file|patch_file)$" },
-        "input": { "filePath": { "regex": "^(\\./)?src/" } },
+        "toolName": { "regex": "^(write_file|patch_file|exec_command|tmux_command)$" },
         "action": "allow"
       },
       {
         "toolName": "ask_google",
         "action": "allow"
+      },
+      {
+        "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" },
+        "action": "allow"
       }
+
+      //{
+      //  "toolName": "exec_command",
+      //  "input": { "command": { "regex": "^(find|grep)$" } },
+      //  "action": "deny",
+      //  "reason": "Use rg or fd instead"
+      //},
+      //{
+      //  "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" },
+      //  "action": "allow"
+      //},
+      //{
+      //  "toolName": "exec_command",
+      //  "input": {
+      //    "command": "npm",
+      //    "args": ["run", { "regex": "^(ci|check|fix|test)$" }]
+      //  },
+      //  "action": "allow"
+      //},
+      //{
+      //  "toolName": { "regex": "^(write_file|patch_file)$" },
+      //  "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } },
+      //  "action": "allow"
+      //},
+      //{
+      //  "toolName": { "regex": "^(write_file|patch_file)$" },
+      //  "input": { "filePath": { "regex": "^(\\./)?src/" } },
+      //  "action": "allow"
+      //},
+      //{
+      //  "toolName": "ask_google",
+      //  "action": "allow"
+      //}
     ]
   },
   "sandbox": {
