chore(agent-sandbox): update example Dockerfile

--- a/agent-sandbox/examples/nodejs-monorepo/Dockerfile
+++ b/agent-sandbox/examples/nodejs-monorepo/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:22
 
 RUN apt update && apt install -y \
-      busybox bash \
-      iptables ipset dnsmasq dnsutils \
-      ripgrep fd-find \
-      curl git locales \
+      busybox bash locales \
+      iptables ipset dnsmasq dnsutils curl \
+      fd-find ripgrep jq \
+      git tmux make shellcheck \
     && bash -c 'ln -s $(which fdfind) /usr/local/bin/fd' \
     && echo 'en_US.UTF-8 UTF-8' >> /etc/locale.gen \
     && echo 'ja_JP.UTF-8 UTF-8' >> /etc/locale.gen \
