feat(agent): split config files and update model
- Change config.json to symlink pointing to config.yolo.json
- Add config.manual.json for manual approval mode
- Add config.yolo.json for auto-approval mode
- Update .gitignore to track new config files
- Update model from GPT-5.2-codex to GPT-5.3-codex
- Adjust section header levels in prompt.mjs (##→#, ###→##)
- Fix error message from "OpenAI rate limit" to "Model rate limit"
- Update config examples and comments in README.md
- Reorder options in sandbox/run.sh

--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -1,96 +1,1 @@
-{
-  "autoApproval": {
-    "defaultAction": "deny",
-    "maxApprovals": 100,
-    "patterns": [
-      // YOLO mode
-      {
-        "toolName": "exec_command",
-        "input": { "command": { "regex": "^(grep|find)$" } },
-        "action": "deny",
-        "reason": "Use rg or fd"
-      },
-      {
-        "toolName": { "regex": "^(fetch_web_page|fetch_web_page_with_browser)$" },
-        "action": "deny",
-        "reason": "Use ask_google instead"
-      },
-
-      {
-        "toolName": "exec_command",
-        "input": { "command": "git", "args": [{ "regex": "^(commit|revert)$" }] },
-        "action": "ask"
-      },
-
-      {
-        "toolName": { "regex": "^(write_file|patch_file|exec_command|tmux_command)$" },
-        "action": "allow"
-      },
-      {
-        "toolName": "ask_google",
-        "action": "allow"
-      },
-      {
-        "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" },
-        "action": "allow"
-      }
-
-      //{
-      //  "toolName": "exec_command",
-      //  "input": { "command": { "regex": "^(find|grep)$" } },
-      //  "action": "deny",
-      //  "reason": "Use rg or fd instead"
-      //},
-      //{
-      //  "toolName": { "regex": "^(delegate_to_subagent|report_as_subagent)$" },
-      //  "action": "allow"
-      //},
-      //{
-      //  "toolName": "exec_command",
-      //  "input": {
-      //    "command": "npm",
-      //    "args": ["run", { "regex": "^(ci|check|fix|test)$" }]
-      //  },
-      //  "action": "allow"
-      //},
-      //{
-      //  "toolName": { "regex": "^(write_file|patch_file)$" },
-      //  "input": { "filePath": { "regex": "^\\.agent/memory/.+\\.md$" } },
-      //  "action": "allow"
-      //},
-      //{
-      //  "toolName": { "regex": "^(write_file|patch_file)$" },
-      //  "input": { "filePath": { "regex": "^(\\./)?src/" } },
-      //  "action": "allow"
-      //},
-      //{
-      //  "toolName": "ask_google",
-      //  "action": "allow"
-      //}
-    ]
-  },
-  "sandbox": {
-    "command": ".agent/sandbox/run.sh",
-    "args": ["--skip-build", "--keep-alive", "30"],
-    "separator": "--",
-    "rules": [
-      {
-        "pattern": {
-          "command": "npm",
-          "args": ["ci"]
-        },
-        "mode": "sandbox",
-        "extraArgs": ["--allow-net", "0.0.0.0/0"]
-      }
-    ]
-  },
-  "mcpServers": {
-    //"notion": {
-    //  "command": "npx",
-    //  "args": ["-y", "mcp-remote", "https://mcp.notion.com/mcp"],
-    //  "options": {
-    //    "enabledTools": ["notion-search", "notion-fetch"]
-    //  }
-    //}
-  }
-}
+config.yolo.json
