feat(agent): use $prefix for config operators and add $has support
- Change 'regex' to '$regex' for regex patterns in JSON config
- Add '$has' operator for array membership checking
- Restructure config files: add config.predefined.json, remove obsolete configs
- Remove tmuxSessionId dependency from loadAppConfig

--- a/agent/.gitignore
+++ b/agent/.gitignore
@@ -9,6 +9,7 @@ tmp/
 !.config/agents.predefined/
 !.config/agents.library/
 !.config/agents/
+!.config/config.predefined.json
 
 .agent/*
 !.agent/config.json
