--- a/agent/.agent/config.json
+++ b/agent/.agent/config.json
@@ -1,1 +1,40 @@
-config.yolo.json
+{
+  "autoApproval": {
+    "defaultAction": "deny",
+    "maxApprovals": 100,
+    "patterns": [
+      {
+        "toolName": {
+          "$regex": "^(fetch_web_page|fetch_web_page_with_browser)$"
+        },
+        "action": "deny",
+        "reason": "Use ask_google instead"
+      },
+      {
+        "toolName": {
+          "$regex": "^(write_file|patch_file|exec_command|tmux_command)$"
+        },
+        "action": "allow"
+      },
+      {
+        "toolName": "ask_google",
+        "action": "allow"
+      }
+    ]
+  },
+  "sandbox": {
+    "command": ".agent/sandbox/run.sh",
+    "args": ["--skip-build", "--keep-alive", "30"],
+    "separator": "--",
+    "rules": [
+      {
+        "pattern": {
+          "command": "npm",
+          "args": ["ci"]
+        },
+        "mode": "sandbox",
+        "extraArgs": ["--allow-net", "0.0.0.0/0"]
+      }
+    ]
+  }
+}
