chore(agent): format config.predefined.json and update biome includes

--- a/agent/biome.json
+++ b/agent/biome.json
@@ -6,7 +6,12 @@
     "useIgnoreFile": false
   },
   "files": {
-    "includes": ["**", "!.config", "!.cache", "!.agent"],
+    "includes": [
+      "src/**",
+      "bin/**",
+      "*.json",
+      ".config/config.predefined.json"
+    ],
     "ignoreUnknown": false
   },
   "formatter": {
