--- a/agent/.config/config.predefined.json
+++ b/agent/.config/config.predefined.json
@@ -11,12 +11,24 @@
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "fd", "args": { "$has": { "$regex": "^(--unrestricted|-u|--no-ignore|-I|--exec|-x|--exec-batch|-X)(=.+)?$" } } },
+        "input": {
+          "command": "fd",
+          "args": {
+            "$has": {
+              "$regex": "^(--unrestricted|-u|--no-ignore|-I|--exec|-x|--exec-batch|-X)(=.+)?$"
+            }
+          }
+        },
         "action": "ask"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "rg", "args": { "$has": { "$regex": "^(--unrestricted|-u|--no-ignore)(=.+)?$" } } },
+        "input": {
+          "command": "rg",
+          "args": {
+            "$has": { "$regex": "^(--unrestricted|-u|--no-ignore)(=.+)?$" }
+          }
+        },
         "action": "ask"
       },
       {
@@ -25,32 +37,59 @@
       },
       {
         "toolName": "exec_command",
-        "input": { "command": { "$regex": "^(echo|ls|cat|head|tail|wc|date|pwd|uname|fd|rg|jq)$" } },
+        "input": {
+          "command": {
+            "$regex": "^(echo|ls|cat|head|tail|wc|date|pwd|uname|fd|rg|jq)$"
+          }
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "sed", "args": ["-n", { "$regex": "^\\d+(,\\d+)?(p|l)$" }] },
+        "input": {
+          "command": "sed",
+          "args": ["-n", { "$regex": "^\\d+(,\\d+)?(p|l)$" }]
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "awk", "args": [{ "$regex": "^F?NR==\\d+(, *F?NR==-?\\d+)? *\\{print (F?NR[,\" ]*)?\\$0\\}$" }] },
+        "input": {
+          "command": "awk",
+          "args": [
+            {
+              "$regex": "^F?NR==\\d+(, *F?NR==-?\\d+)? *\\{print (F?NR[,\" ]*)?\\$0\\}$"
+            }
+          ]
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "awk", "args": [{ "$regex": "^F?NR[=<>]+\\d+ *(&& *F?NR[=<>]+-?\\d+)? *\\{print (F?NR[,\" ]*)?\\$0\\}$" }] },
+        "input": {
+          "command": "awk",
+          "args": [
+            {
+              "$regex": "^F?NR[=<>]+\\d+ *(&& *F?NR[=<>]+-?\\d+)? *\\{print (F?NR[,\" ]*)?\\$0\\}$"
+            }
+          ]
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "awk", "args": [{ "$regex": "^F?NR[=<>]+\\d+ *(&& *F?NR[=<>]+-?\\d+)?$" }] },
+        "input": {
+          "command": "awk",
+          "args": [{ "$regex": "^F?NR[=<>]+\\d+ *(&& *F?NR[=<>]+-?\\d+)?$" }]
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "git", "args": [{ "$regex": "^(status|diff|log|show|ls-remote|rev-parse)$" }] },
+        "input": {
+          "command": "git",
+          "args": [{ "$regex": "^(status|diff|log|show|ls-remote|rev-parse)$" }]
+        },
         "action": "allow"
       },
       {
@@ -65,7 +104,10 @@
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "docker", "args": ["compose", { "$regex": "^(ps|logs)$" }] },
+        "input": {
+          "command": "docker",
+          "args": ["compose", { "$regex": "^(ps|logs)$" }]
+        },
         "action": "allow"
       },
       {
@@ -85,17 +127,32 @@
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "gh", "args": [{ "$regex": "^(pr|issue)$" }, { "$regex": "^(view|diff)$" }] },
+        "input": {
+          "command": "gh",
+          "args": [{ "$regex": "^(pr|issue)$" }, { "$regex": "^(view|diff)$" }]
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "gh", "args": ["api", { "$regex": "^repos/[^/]+/[^/]+/pulls/\\d+/comments$" }] },
+        "input": {
+          "command": "gh",
+          "args": [
+            "api",
+            { "$regex": "^repos/[^/]+/[^/]+/pulls/\\d+/comments$" }
+          ]
+        },
         "action": "allow"
       },
       {
         "toolName": "exec_command",
-        "input": { "command": "gh", "args": ["api", { "$regex": "^repos/[^/]+/[^/]+/pulls/comments/\\d+$" }] },
+        "input": {
+          "command": "gh",
+          "args": [
+            "api",
+            { "$regex": "^repos/[^/]+/[^/]+/pulls/comments/\\d+$" }
+          ]
+        },
         "action": "allow"
       }
     ]
